// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Capacity Planing Cardset 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc CardSet-sc-143b99f-0 kpxcYq"
    >
      <div
        class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 bowqxv CPCard-sc-148dhup-0 KzLzU"
      >
        <h3
          class="Text-sc-1wu7vpu-0-h3 Headings__SubsectionTitle-igpciy-0 jFxZLe"
          font-size="20px"
          font-weight="500"
        >
          Title
        </h3>
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Open"
          class="IconicButton__WrapperButton-sc-1u3dojp-1 heRWcu IconicButton-sc-1u3dojp-2 hOBWmS"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 jysEEq"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="more"
            p="half"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </button>
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 jJopHC"
        >
          <div
            class="Box-sc-1qu1edy-0 kyPtqg"
          >
            <p
              class="Text-sc-1wu7vpu-0 jRzHjr"
              color="currentColor"
              font-size="16px"
            >
              Item: Some item
            </p>
            <p
              class="Text-sc-1wu7vpu-0 jRzHjr"
              color="currentColor"
              font-size="16px"
            >
              Quantity: 746.00 ea
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc"
          >
            <p
              class="Text-sc-1wu7vpu-0 haTqYD"
              color="currentColor"
              font-size="16px"
            >
              Due: Jun2 24, 2019
            </p>
            <p
              class="Text-sc-1wu7vpu-0 haTqYD"
              color="currentColor"
              font-size="16px"
            >
              12:00 pm
            </p>
          </div>
        </div>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 bowqxv CPCard-sc-148dhup-0 KzLzU"
      >
        <h3
          class="Text-sc-1wu7vpu-0-h3 Headings__SubsectionTitle-igpciy-0 jFxZLe"
          font-size="20px"
          font-weight="500"
        >
          Title
        </h3>
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Open"
          class="IconicButton__WrapperButton-sc-1u3dojp-1 heRWcu IconicButton-sc-1u3dojp-2 hOBWmS"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 jysEEq"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="more"
            p="half"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </button>
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 jJopHC"
        >
          <div
            class="Box-sc-1qu1edy-0 kyPtqg"
          >
            <p
              class="Text-sc-1wu7vpu-0 jRzHjr"
              color="currentColor"
              font-size="16px"
            >
              Item: Some item
            </p>
            <p
              class="Text-sc-1wu7vpu-0 jRzHjr"
              color="currentColor"
              font-size="16px"
            >
              Quantity: 746.00 ea
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc"
          >
            <p
              class="Text-sc-1wu7vpu-0 haTqYD"
              color="currentColor"
              font-size="16px"
            >
              Due: Jun2 24, 2019
            </p>
            <p
              class="Text-sc-1wu7vpu-0 haTqYD"
              color="currentColor"
              font-size="16px"
            >
              12:00 pm
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Card 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 bowqxv"
    >
      I am a card.
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Cardset 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc CardSet-sc-143b99f-0 kpxcYq"
    >
      <div
        class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 bowqxv"
      >
        I am a 1st card in a cardset.
      </div>
      <div
        class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 bowqxv"
      >
        I am a 2nd card in a cardset.
      </div>
      <div
        class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 bowqxv"
      >
        I am a 3rd card in a cardset.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Custom card 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 hvvXIm"
      color="white"
    >
      I am a custom card.
    </div>
  </div>
</div>
`;
